Adicionando a Home Adm

--- a/movies/src/app/app.component.html
+++ b/movies/src/app/app.component.html
@@ -1,12 +1,3 @@
-<body>
-  <!--NAVBAR-->
-  <app-navbar></app-navbar>
-
-  <!--CARD-->
-  <app-card></app-card>
-
-  <!--CAROUSEL-->
-  <app-carousel></app-carousel>
-
+<div>
   <router-outlet></router-outlet>
-</body>
+</div>
