--- a/movies/src/app/home-adm/home-adm.component.html
+++ b/movies/src/app/home-adm/home-adm.component.html
@@ -1,12 +1,9 @@
+<p>home-adm works!</p>
 <body>
   <!--NAVBAR-->
   <app-navbar></app-navbar>
-
-  <!--CARD-->
-  <app-card></app-card>
-
-  <!--CAROUSEL-->
-  <app-carousel></app-carousel>
-
   <router-outlet></router-outlet>
+  <div>
+    <a (click)="logout()">(Logout)</a>
+  </div>
 </body>
