--- a/movies/src/app/home/shared/components/card/card.component.scss
+++ b/movies/src/app/home/shared/components/card/card.component.scss
@@ -1,10 +1,11 @@
-.card {
+.nav {
   background-color: black !important;
 }
-.card-body {
+.nav-body {
   background-color: black !important;
   text-align: center;
   font-style: italic;
-  font-size: 40px;
+  font-size: 100px;
   font-family: "Times New Roman", Times, serif;
+  max-width: 100%;
 }
