--- a/movies/src/app/home/shared/components/navbar/navbar.component.html
+++ b/movies/src/app/home/shared/components/navbar/navbar.component.html
@@ -5,11 +5,7 @@
         <img src="assets/cine.png" height="75" />
       </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/home']">Filmes</a>
-          </li>
-        </ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
         <a
           class="navbar-brand"
           routerLinkActive="active"
