--- a/movies/src/app/login/login.component.html
+++ b/movies/src/app/login/login.component.html
@@ -1,27 +1,49 @@
-<p>login works!</p>
-<div class="auth-wrapper">
-  <form class="form-signin" [formGroup]="signinForm" (ngSubmit)="login()">
-    <h3 class="h3 mb-3 font-weight-normal">{{ title }}</h3>
-    <div class="form-group">
-      <label>Email</label>
-      <input
-        type="email"
-        class="form-control col-6"
-        formControlName="email"
-        placeholder="Enter email"
-        required
-      />
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<body>
+  <link
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <div class="container">
+    <div class="row h-100 justify-content-center align-items-center">
+      <div class="card text-white bg-dark mb-3">
+        <div class="card-body">
+          <h2 class="text-center">Entrar</h2>
+
+          <form (ngSubmit)="onSubmit()" #form="ngForm">
+            <div class="form-group">
+              <label>E-mail</label>
+              <input
+                class="form-control"
+                type="email"
+                name="email"
+                id="email"
+                [(ngModel)]="login.email"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label>Senha</label>
+              <input
+                class="form-control"
+                type="password"
+                name="password"
+                id="password"
+                [(ngModel)]="login.password"
+                required
+              />
+            </div>
+            <button
+              type="submit"
+              class="btn btn-primary btn-block"
+              [disabled]="form.form.invalid"
+            >
+              Entrar
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
-    <div class="form-group">
-      <label>Password</label>
-      <input
-        type="password"
-        class="form-control col-6"
-        formControlName="password"
-        placeholder="Password"
-      />
-    </div>
-    <a class="nav-link" [routerLink]="['/home']">Nova Conta</a>
-    <button type="submit" class="btn btn-block btn-primary col-6">Login</button>
-  </form>
-</div>
+  </div>
+</body>
