--- a/movies/src/app/home/shared/components/card/card.component.html
+++ b/movies/src/app/home/shared/components/card/card.component.html
@@ -1,8 +1,16 @@
 <ul class="h-75 w-100 p-3 nav justify-content-center">
   <li class="nav-item">
-    <a class="nav-link" href="#">Todos os Filmes</a>
+    <a class="nav-link" [routerLink]="['/ListMovies']">
+      <button type="button" class="btn btn-outline-warning btn-lg btn-block">
+        Todos os Filmes
+      </button>
+    </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Filmes por genero</a>
+    <a class="nav-link" href="#">
+      <button type="button" class="btn btn-outline-warning btn-lg btn-block">
+        Filmes por Genero
+      </button>
+    </a>
   </li>
 </ul>
