--- a/movies/src/app/home/list-movies/list-movies.component.html
+++ b/movies/src/app/home/list-movies/list-movies.component.html
@@ -2,13 +2,23 @@
   <!--NAVBAR-->
   <app-navbar></app-navbar>
 
+  <form class="d-flex">
+    <input
+      class="form-control me-2"
+      type="search"
+      placeholder="Search"
+      aria-label="Search"
+    />
+    <button class="btn btn-outline-success" type="submit">Search</button>
+  </form>
+
   <div class="row">
     <div *ngFor="let movie of movie" class="col-md-4 mt-4">
       <div class="card-movie-container">
         <div class="card-body">
           <img src="{{ movie.image }}" class="card-img-top" alt="..." />
           <h5 class="card-title">{{ movie.title }}</h5>
-          <p class="card-text">{{ movie.synopsis }}</p>
+          <p class="card-text text-warning">{{ movie.synopsis }}</p>
         </div>
         <div class="card-footer">
           <div class="row">
@@ -16,6 +26,13 @@
               <a class="btn btn-sm btn-dark mr-6">{{ movie.releaseDate }}</a>
               <a class="btn btn-sm btn-danger mr-6">{{
                 movie.language.name
+              }}</a>
+              <a class="btn btn-sm btn-danger mr-6">{{ movie.language.tag }}</a>
+              <a class="btn btn-sm btn-primary mr-6">{{
+                movie.category.name
+              }}</a>
+              <a class="btn btn-sm btn-primary mr-6">{{
+                movie.category.tag
               }}</a>
             </div>
             <div class="col text-right">
