--- a/movies/src/app/home-adm/user/user.component.scss
+++ b/movies/src/app/home-adm/user/user.component.scss
@@ -1,19 +1,19 @@
-.bg-dark {
-  background-color: black !important;
-}
-.body {
-  background-color: black !important;
-}
-.card-img-bottom {
-  max-height: 80vh;
-  background-color: black !important;
-}
-.nav {
-  background-color: black !important;
-}
 .card {
   background-color: black !important;
-  text-align: center;
-  font-style: italic;
-  font-family: "Times New Roman", Times, serif;
+}
+.card-body {
+  background-color: black !important;
+}
+.navbar {
+  background-color: black !important;
+}
+.container-fluid {
+  background-color: black !important;
+}
+body {
+  background-color: black !important;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  height: 91vh;
 }
