--- a/movies/src/app/app.component.scss
+++ b/movies/src/app/app.component.scss
@@ -1,3 +1,23 @@
-body {
-  background-color: black !important;
+.main {
+  font-size: 1em;
+  margin: 0%;
+  height: 100%;
+  width: 100%;
+  background: var(--background);
+  color: var(--on-background);
+}
+.innerdiv {
+  padding: 25px;
+  margin-top: 30px;
+  text-align: left;
+  background: var(--ligth);
+  color: var(--on-ligth);
+}
+.button-accessibility {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  top: 11px;
+  margin: 0 5px;
 }
