--- a/movies/src/app/home-adm/category/category.component.html
+++ b/movies/src/app/home-adm/category/category.component.html
@@ -1,80 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
+<!--NAVBAR-->
+<nav class="navbar navbar-expand-lg">
+  <div class="container-fluid">
+    <a class="navbar-brand" [routerLink]="['/HomeAdm']">
+      <img src="assets/movies.svg" height="200" />
+    </a>
+    <div class="nav justify-content-end" id="navbarSupportedContent">
+      <button
+        type="button"
+        class="btn btn-outline-danger"
+        [routerLink]="['/HomeAdm']"
+      >
+        BACK
+      </button>
+    </div>
+  </div>
+</nav>
 
-  <link
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <!--NAVBAR-->
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" [routerLink]="['/HomeAdm']">
-          <img src="assets/cine.png" height="75" />
-        </a>
-      </div>
-    </nav>
-  </header>
-
-  <body>
-    <div class="card">
-      <div class="card-header">
-        <div class="float-left">
-          <h5>CATEGORY</h5>
-        </div>
-        <div class="float-right">
-          <button
-            type="button"
-            class="btn btn-outline-warning"
-            [routerLink]="['/NewCategory']"
-          >
-            New Category
-          </button>
-        </div>
-      </div>
-      <div class="card-body">
-        <table class="table table-dark">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>NAME</th>
-              <th>TAG</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let category of category$ | async; let i = index">
-              <td>{{ i + 1 }}</td>
-              <td>{{ category.name }}</td>
-              <td>{{ category.tag }}</td>
-              <td>
-                <span class="float-right">
-                  <button
-                    class="btn btn-outline-warning mb-1 btn-sm"
-                    [routerLink]="['/SaveCategory/' + category.id]"
-                  >
-                    Details
-                  </button>
-                </span>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+<div class="row h-100 justify-content-center align-items-center">
+  <div class="card">
+    <div class="card-header">
+      <div class="float-left">
+        <h5>CATEGORY</h5>
       </div>
       <div class="float-right">
         <button
           type="button"
-          class="btn btn-outline-danger"
-          [routerLink]="['/HomeAdm']"
+          class="btn btn-outline-warning"
+          [routerLink]="['/NewCategory']"
         >
-          BACK
+          New Category
         </button>
       </div>
     </div>
-    <router-outlet></router-outlet>
-  </body>
-</html>
+    <div class="card-body">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>NAME</th>
+            <th>TAG</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let category of category$ | async; let i = index">
+            <td>{{ i + 1 }}</td>
+            <td>{{ category.name }}</td>
+            <td>{{ category.tag }}</td>
+            <td>
+              <span class="float-right">
+                <button
+                  class="btn btn-outline-warning mb-1 btn-sm"
+                  [routerLink]="['/SaveCategory/' + category.id]"
+                >
+                  Details
+                </button>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
+</div>
