--- a/movies/src/app/home-adm/category/save-category/save-category.component.html
+++ b/movies/src/app/home-adm/category/save-category/save-category.component.html
@@ -1,96 +1,80 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-
-  <link
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <!--NAVBAR-->
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" [routerLink]="['/HomeAdm']">
-          <img src="assets/cine.png" height="75" />
-        </a>
-      </div>
-    </nav>
-  </header>
-
-  <body>
-    <div class="container h-100">
-      <div class="row h-100 justify-content-center align-items-center">
-        <div class="card text-white bg-dark mb-3">
-          <h2 class="text-center">CATEGORY</h2>
-          <form>
-            <div class="form-group mb-3">
-              <label for="validationTooltip05">NAME</label>
-              <input
-                class="form-control"
-                type="text"
-                name="name"
-                id="name"
-                [(ngModel)]="category.name"
-                placeholder="Required name"
-                required
-              />
-            </div>
-
-            <div class="form-group">
-              <label>TAG</label>
-              <input
-                class="form-control"
-                type="text"
-                name="tag"
-                id="tag"
-                [(ngModel)]="category.tag"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label>Language</label>
-              <input
-                class="form-control"
-                type="number"
-                name="language"
-                id="language"
-                [(ngModel)]="category.language.id"
-                required
-              />
-            </div>
-
-            <button
-              justify-content-center
-              type="submit"
-              class="btn btn-outline-warning btn block"
-              (click)="updateCategory()"
-            >
-              Update
-            </button>
-            {{ " " }}
-            <button
-              type="submit"
-              class="btn btn-outline-danger btn block"
-              [routerLink]="['/Category']"
-              (click)="deleteCategory()"
-            >
-              Delete
-            </button>
-            {{ " " }}
-            <button
-              type="submit"
-              class="btn btn-outline-primary btn block"
-              [routerLink]="['/Category']"
-            >
-              Back
-            </button>
-          </form>
-          <router-outlet></router-outlet>
-        </div>
-      </div>
+<!--NAVBAR-->
+<header>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" [routerLink]="['/HomeAdm']">
+        <img src="assets/movies.svg" height="200" />
+      </a>
     </div>
-  </body>
-</html>
+  </nav>
+</header>
+
+<div class="row h-100 justify-content-center align-items-center">
+  <div class="card">
+    <h2 class="text-center">CATEGORY</h2>
+    <form>
+      <div class="form-group mb-3">
+        <label for="validationTooltip05">NAME</label>
+        <input
+          class="form-control"
+          type="text"
+          name="name"
+          id="name"
+          [(ngModel)]="category.name"
+          placeholder="Required name"
+          required
+        />
+      </div>
+
+      <div class="form-group">
+        <label>TAG</label>
+        <input
+          class="form-control"
+          type="text"
+          name="tag"
+          id="tag"
+          [(ngModel)]="category.tag"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label>Language</label>
+        <input
+          class="form-control"
+          type="number"
+          name="language"
+          id="language"
+          [(ngModel)]="category.language.id"
+          required
+        />
+      </div>
+
+      <button
+        justify-content-center
+        type="submit"
+        class="btn btn-outline-warning btn block"
+        (click)="updateCategory()"
+      >
+        Update
+      </button>
+      {{ " " }}
+      <button
+        type="submit"
+        class="btn btn-outline-danger btn block"
+        [routerLink]="['/Category']"
+        (click)="deleteCategory()"
+      >
+        Delete
+      </button>
+      {{ " " }}
+      <button
+        type="submit"
+        class="btn btn-outline-primary btn block"
+        [routerLink]="['/Category']"
+      >
+        Back
+      </button>
+    </form>
+    <router-outlet></router-outlet>
+  </div>
+</div>
