--- a/movies/src/app/home-adm/home-adm.component.scss
+++ b/movies/src/app/home-adm/home-adm.component.scss
@@ -1,19 +1,17 @@
-.bg-dark {
-  background-color: black !important;
-}
-.body {
-  background-color: black !important;
-}
 .card-img-bottom {
   max-height: 80vh;
-  background-color: black !important;
 }
-.nav {
-  background-color: black !important;
-}
+
 .card {
-  background-color: black !important;
+  background: var(--background);
+  color: var(--on-background);
   text-align: center;
   font-style: italic;
   font-family: "Times New Roman", Times, serif;
+}
+.card-title {
+  font: 1em sans-serif;
+}
+.button-text {
+  font: 1.5em sans-serif;
 }
