--- a/movies/src/app/home-adm/movie/new-movie/new-movie.component.scss
+++ b/movies/src/app/home-adm/movie/new-movie/new-movie.component.scss
@@ -1,23 +1,13 @@
-body {
-  background-color: black !important;
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  height: 91vh;
-}
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css);
+
 .container,
 .row.justify-content-center.align-items-center {
   height: 100%;
   align-content: center;
 }
 .card {
-  background-color: black !important;
+  background: var(--background);
+  color: var(--on-background);
   margin-top: 60px;
   max-width: 30rem;
-}
-.navbar {
-  background-color: black !important;
-}
-.container-fluid {
-  background-color: black !important;
 }
