--- a/movies/src/app/home-adm/movie/save-movie/save-movie.component.html
+++ b/movies/src/app/home-adm/movie/save-movie/save-movie.component.html
@@ -1,139 +1,125 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-
-  <link
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <!--NAVBAR-->
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" [routerLink]="['/HomeAdm']">
-          <img src="assets/cine.png" height="75" />
-        </a>
-      </div>
-    </nav>
-  </header>
-
-  <body>
-    <div class="container h-100">
-      <div class="row h-100 justify-content-center align-items-center">
-        <div class="card text-white bg-dark mb-3">
-          <h2 class="text-center">Movie</h2>
-          <form>
-            <div class="form-group mb-3">
-              <label for="validationTooltip05">Title</label>
-              <input
-                class="form-control"
-                type="text"
-                name="title"
-                id="title"
-                [(ngModel)]="movie.title"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label>Synopsis</label>
-              <input
-                class="form-control"
-                type="text"
-                name="synopsis"
-                id="synopsis"
-                [(ngModel)]="movie.synopsis"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label>Image</label>
-              <input
-                class="form-control"
-                type="text"
-                name="img"
-                id="img"
-                [(ngModel)]="movie.image"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label>Release Date</label>
-              <input
-                class="form-control"
-                type="text"
-                name="releaseDate"
-                id="releaseDate"
-                [(ngModel)]="movie.releaseDate"
-                placeholder="Ex: 00/00/0000"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label>Duration</label>
-              <input
-                class="form-control"
-                type="text"
-                name="duration"
-                id="duration"
-                [(ngModel)]="movie.duration"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label>Language</label>
-              <input
-                class="form-control"
-                type="number"
-                name="language"
-                id="language"
-                [(ngModel)]="movie.language.id"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label>Category</label>
-              <input
-                class="form-control"
-                type="number"
-                name="category"
-                id="category"
-                [(ngModel)]="movie.category.id"
-                required
-              />
-            </div>
-
-            <button
-              justify-content-center
-              type="submit"
-              class="btn btn-outline-warning btn block"
-              (click)="updateMovie()"
-            >
-              Update
-            </button>
-            {{ " " }}
-            <button
-              type="submit"
-              class="btn btn-outline-danger btn block"
-              [routerLink]="['/Movie']"
-              (click)="deleteMovie()"
-            >
-              Delete
-            </button>
-            {{ " " }}
-            <button
-              type="submit"
-              class="btn btn-outline-primary btn block"
-              [routerLink]="['/Movie']"
-            >
-              Back
-            </button>
-          </form>
-          <router-outlet></router-outlet>
-        </div>
-      </div>
+<!--NAVBAR-->
+<header>
+  <nav class="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" [routerLink]="['/HomeAdm']">
+        <img src="assets/movies.svg" height="200" />
+      </a>
     </div>
-  </body>
-</html>
+  </nav>
+</header>
+
+<body>
+  <div class="row h-100 justify-content-center align-items-center">
+    <div class="card">
+      <h2 class="text-center">Movie</h2>
+      <form>
+        <div class="form-group mb-3">
+          <label for="validationTooltip05">Title</label>
+          <input
+            class="form-control"
+            type="text"
+            name="title"
+            id="title"
+            [(ngModel)]="movie.title"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label>Synopsis</label>
+          <input
+            class="form-control"
+            type="text"
+            name="synopsis"
+            id="synopsis"
+            [(ngModel)]="movie.synopsis"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label>Image</label>
+          <input
+            class="form-control"
+            type="text"
+            name="img"
+            id="img"
+            [(ngModel)]="movie.image"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label>Release Date</label>
+          <input
+            class="form-control"
+            type="text"
+            name="releaseDate"
+            id="releaseDate"
+            [(ngModel)]="movie.releaseDate"
+            placeholder="Ex: 00/00/0000"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label>Duration</label>
+          <input
+            class="form-control"
+            type="text"
+            name="duration"
+            id="duration"
+            [(ngModel)]="movie.duration"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label>Language</label>
+          <input
+            class="form-control"
+            type="number"
+            name="language"
+            id="language"
+            [(ngModel)]="movie.language.id"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label>Category</label>
+          <input
+            class="form-control"
+            type="number"
+            name="category"
+            id="category"
+            [(ngModel)]="movie.category.id"
+            required
+          />
+        </div>
+
+        <button
+          justify-content-center
+          type="submit"
+          class="btn btn-outline-warning btn block"
+          (click)="updateMovie()"
+        >
+          Update
+        </button>
+        {{ " " }}
+        <button
+          type="submit"
+          class="btn btn-outline-danger btn block"
+          [routerLink]="['/Movie']"
+          (click)="deleteMovie()"
+        >
+          Delete
+        </button>
+        {{ " " }}
+        <button
+          type="submit"
+          class="btn btn-outline-primary btn block"
+          [routerLink]="['/Movie']"
+        >
+          Back
+        </button>
+      </form>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</body>
