--- a/movies/src/app/home-adm/user/new-user/new-user.component.html
+++ b/movies/src/app/home-adm/user/new-user/new-user.component.html
@@ -1,123 +1,108 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
+<!--NAVBAR-->
 
-  <link
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <!--NAVBAR-->
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" [routerLink]="['/HomeAdm']">
-          <img src="assets/cine.png" height="75" />
-        </a>
-      </div>
-    </nav>
-  </header>
+<nav class="navbar">
+  <div class="container-fluid">
+    <a class="navbar-brand" [routerLink]="['/HomeAdm']">
+      <img src="assets/movies.svg" height="200" />
+    </a>
+  </div>
+</nav>
 
-  <body>
-    <div class="container h-100">
-      <div class="row h-100 justify-content-center align-items-center">
-        <div class="card text-white bg-dark mb-3">
-          <h2 class="text-center">Create new User</h2>
-          <form (ngSubmit)="onSubmit()" #form="ngForm">
-            <div class="form-group mb-3">
-              <label for="validationTooltip05">Name</label>
-              <input
-                class="form-control is-invalid"
-                type="text"
-                name="name"
-                id="name"
-                [(ngModel)]="account.name"
-                placeholder="Required name"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label>CPF</label>
-              <input
-                class="form-control is-invalid"
-                type="text"
-                name="cpf"
-                id="cpf"
-                [(ngModel)]="account.cpf"
-                required
-                placeholder="Ex: 000.000.000-00"
-                maxlength="14"
-              />
-            </div>
-            <div class="form-group">
-              <label>Phone</label>
-              <input
-                class="form-control is-invalid"
-                type="text"
-                name="phone_number"
-                id="phone_number"
-                [(ngModel)]="account.phone_number"
-                placeholder="Ex: 00 00000-0000"
-                required
-                maxlength="13"
-              />
-            </div>
-            <div class="form-group">
-              <label>EMAIL</label>
-              <input
-                class="form-control is-invalid"
-                type="email"
-                name="email"
-                id="email"
-                [(ngModel)]="account.email"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label>Password</label>
-              <input
-                class="form-control is-invalid"
-                type="password"
-                name="Password"
-                id="Password"
-                [(ngModel)]="account.password"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label>Language</label>
-              <input
-                class="form-control"
-                type="number"
-                name="language"
-                id="language"
-                [(ngModel)]="account.language.id"
-                required
-              />
-            </div>
-
-            <button
-              justify-content-center
-              type="submit"
-              class="btn btn-outline-warning btn block"
-              [disabled]="form.form.invalid"
-            >
-              Create User
-            </button>
-            {{ " " }}
-            <button
-              type="submit"
-              class="btn btn-outline-danger btn block"
-              [routerLink]="['/User']"
-            >
-              Back
-            </button>
-          </form>
-          <router-outlet></router-outlet>
+<div class="container h-100">
+  <div class="row h-100 justify-content-center align-items-center">
+    <div class="card mb-3">
+      <h2 class="text-center">Create new User</h2>
+      <form (ngSubmit)="onSubmit()" #form="ngForm">
+        <div class="form-group mb-3">
+          <label for="validationTooltip05">Name</label>
+          <input
+            class="form-control is-invalid"
+            type="text"
+            name="name"
+            id="name"
+            [(ngModel)]="account.name"
+            placeholder="Required name"
+            required
+          />
         </div>
-      </div>
+        <div class="form-group">
+          <label>CPF</label>
+          <input
+            class="form-control is-invalid"
+            type="text"
+            name="cpf"
+            id="cpf"
+            [(ngModel)]="account.cpf"
+            required
+            placeholder="Ex: 000.000.000-00"
+            maxlength="14"
+          />
+        </div>
+        <div class="form-group">
+          <label>Phone</label>
+          <input
+            class="form-control is-invalid"
+            type="text"
+            name="phone_number"
+            id="phone_number"
+            [(ngModel)]="account.phone_number"
+            placeholder="Ex: 00 00000-0000"
+            required
+            maxlength="13"
+          />
+        </div>
+        <div class="form-group">
+          <label>EMAIL</label>
+          <input
+            class="form-control is-invalid"
+            type="email"
+            name="email"
+            id="email"
+            [(ngModel)]="account.email"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input
+            class="form-control is-invalid"
+            type="password"
+            name="Password"
+            id="Password"
+            [(ngModel)]="account.password"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label>Language</label>
+          <input
+            class="form-control"
+            type="number"
+            name="language"
+            id="language"
+            [(ngModel)]="account.language.id"
+            required
+          />
+        </div>
+
+        <button
+          justify-content-center
+          type="submit"
+          class="btn btn-outline-warning btn block"
+          [disabled]="form.form.invalid"
+        >
+          Create User
+        </button>
+        {{ " " }}
+        <button
+          type="submit"
+          class="btn btn-outline-danger btn block"
+          [routerLink]="['/User']"
+        >
+          Back
+        </button>
+      </form>
+      <router-outlet></router-outlet>
     </div>
-  </body>
-</html>
+  </div>
+</div>
