--- a/movies/src/app/home-adm/user/user.component.scss
+++ b/movies/src/app/home-adm/user/user.component.scss
@@ -1,19 +1,9 @@
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css);
 .card {
-  background-color: black !important;
+  background: var(--background);
+  color: var(--on-background);
 }
-.card-body {
-  background-color: black !important;
-}
-.navbar {
-  background-color: black !important;
-}
-.container-fluid {
-  background-color: black !important;
-}
-body {
-  background-color: black !important;
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  height: 91vh;
+.table {
+  background: var(--background);
+  color: var(--on-background);
 }
