--- a/movies/src/app/home-adm/home-adm.component.html
+++ b/movies/src/app/home-adm/home-adm.component.html
@@ -19,7 +19,7 @@
 <ul class="nav justify-content-center">
   <li class="nav-item">
     <a class="nav-link" [routerLink]="['/User']">
-      <button type="button" class="button-text btn-lg btn-block">
+      <button sr-ony="true" type="button" class="button-text btn-lg btn-block">
         Manage Users
       </button>
     </a>
