--- a/movies/src/app/home/genre-movies/genre-movies.component.html
+++ b/movies/src/app/home/genre-movies/genre-movies.component.html
@@ -1,32 +1,42 @@
 <!--NAVBAR-->
 <app-navbar></app-navbar>
 
-<div class="card" *ngFor="let category of category">
-  <div class="card-body">
-    <h5 class="card-title">
-      <input
-        class="form-control"
-        type="text"
-        name="title"
-        [(ngModel)]="category.name"
-        (input)="Search()"
-      />
-    </h5>
-    <div class="row">
-      <div class="col-sm-2" *ngFor="let movie of movie">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">{{ movie.title }}</h5>
-            <p class="card-text">
-              With supporting text below as a natural lead-in to additional
-              content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="panel-heading">Movies Category</div>
+<ul class="nav nav-stacked">
+  <a
+    routerLinkActive="active"
+    class="list-group-item"
+    *ngFor="let category of category"
+  >
+    <button type="button" class="btn-lg btn-block">
+      {{ category.name }}
+    </button></a
+  >
+</ul>
+
+<div class="row">
+  <div *ngFor="let movie of movie" class="col-md-3 mt-4">
+    <div class="card-movie-container border border-success">
+      <div class="card-body">
+        <img src="{{ movie.image }}" class="card-img-top" alt="..." />
+        <h5 class="card-title">{{ movie.title }}</h5>
+        <p class="card-text">{{ movie.synopsis }}</p>
+      </div>
+      <div class="card-footer">
+        <div class="row">
+          <div class="col">
+            <a class="btn btn-sm btn-dark mr-6">{{ movie.releaseDate }}</a>
+            <a class="btn btn-sm btn-danger mr-6">{{ movie.language.name }}</a>
+            <a class="btn btn-sm btn-danger mr-6">{{ movie.language.tag }}</a>
+            <a class="btn btn-sm btn-primary mr-6">{{ movie.category.name }}</a>
+            <a class="btn btn-sm btn-primary mr-6">{{ movie.category.tag }}</a>
+          </div>
+          <div class="col text-right">
+            <h5>{{ movie.duration }}⌛</h5>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
 <router-outlet></router-outlet>
